--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "env": "^0.0.2",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0",
     "prettier": "^3.5.1"
   }
 }
